fix dark mode links

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -65,7 +65,7 @@ a {
 
 a:not([class]) {
   text-decoration: none;
-  background-image: linear-gradient($border-color 0%, $border-color 100%);
+  background-image: linear-gradient(var(--color-border) 0%, var(--color-border) 100%);
   background-repeat: repeat-x;
   background-position: 0 100%;
   background-size: 1px 1px;
